--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,69 @@
-.bg-black {
-  background-color: #242424 !important;
-}
 
-.btn-gh {
-  left: 0;
+.header{
+  text-align: center;
 }
-
-.App-h2 {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
+  text-align: center;
+  width: 980px;
+  margin: auto auto;
+}
+h1{
+  animation: bounceIn 0.75s;
+  text-align: center;
+  font-family: 'Anton', sans-serif;
+  font-size: 55px;
+}
+label{
+  font-family: 'Prompt', sans-serif;
+  font-size: 25px;
+}
+@keyframes bounceIn {
+  0%{
+    transform: scale(0);
+  }
+  80%{
+    transform: scale(1.2);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
+.card-header{
+  text-align: center;
+  font-size: 30px;
+}
+.card-body{
+  font-size: 25px;
+}
+.card-body ul{
+  list-style: none;
+  padding-left: 0%;
+}
+.card-body ul li{
+  text-align: center;
+}
+.info-card{
+  border: 5px solid orange;
+  border-radius: 20px;
+  background-color: teal;
+  width: 70%;
+  margin: 5% auto;
+  padding-top: 3%;
+  padding-bottom: 3%;
   color: white;
+  font-family: 'Prompt', sans-serif;
+}
+@keyframes slideInFromTop {
+  0%{
+    top: -10%;
+  }
+  100%{
+    top: 0%;
+  }
+}
+.search-box-field{
+  margin-left: 4%;
+  font-size: 20px;
+  font-family: 'Prompt', sans-serif;
+  padding: 10px;
 }
