--- a/src/App.css
+++ b/src/App.css
@@ -7,16 +7,25 @@ body{
   width: 980px;
   margin: auto auto;
   background-image: url("image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 h1{
   animation: bounceIn 0.75s;
   text-align: center;
   font-family: 'Anton', sans-serif;
   font-size: 55px;
+  color: orangered;
+  box-shadow: orchid;
+  letter-spacing: 4px;
+  filter: drop-shadow(5px 5px #1e3ad4);
 }
 label{
   font-family: 'Prompt', sans-serif;
-  font-size: 25px;
+  font-size: 35px;
+  font-weight: 900;
+  color: #1e3ad4;
+  filter: drop-shadow(3px 3px white)
 }
 @keyframes bounceIn {
   0%{
@@ -67,4 +76,6 @@ label{
   font-size: 20px;
   font-family: 'Prompt', sans-serif;
   padding: 10px;
+  box-shadow: 10px 10px teal;
+  border: 4px solid black;
 }
